--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -8,7 +8,7 @@
     <div class="row">
       <div class="col-md-2">Filter by:</div>
       <div class="col-md-4">
-        <input type="text" [(ngModel)]="listFilter" />
+        <input #filterElement type="text" [(ngModel)]="listFilter" />
       </div>
     </div>
     <div class="row" [hidden]="!listFilter">
