refactor: using criteria component selector in template

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -4,17 +4,8 @@
   </div>
 
   <div class="panel-body">
-    <!-- Filter by the Title   -->
     <div class="row">
-      <div class="col-md-2">Filter by:</div>
-      <div class="col-md-4">
-        <input #filterElement type="text" [(ngModel)]="listFilter" />
-      </div>
-    </div>
-    <div class="row" [hidden]="!listFilter">
-      <div class="col-md-10">
-        <h3>Filtered by: {{ listFilter }}</h3>
-      </div>
+      <pm-criteria class="col-md-10"></pm-criteria>
     </div>
 
     <div class="table-responsive">
