feat: passing data into a child component with input property

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -5,7 +5,11 @@
 
   <div class="panel-body">
     <div class="row">
-      <pm-criteria class="col-md-10"></pm-criteria>
+      <pm-criteria
+        class="col-md-10"
+        [displayCriteria]="includeDetail"
+        [hitCount]="filteredProducts?.length"
+      ></pm-criteria>
     </div>
 
     <div class="table-responsive">
