--- a/src/app/shared/criteria/criteria.component.html
+++ b/src/app/shared/criteria/criteria.component.html
@@ -4,8 +4,8 @@
     <input #filterElement type="text" [(ngModel)]="listFilter" />
   </div>
 </div>
-<div class="row" [hidden]="!listFilter">
+<div class="row" *ngIf="displayCriteria">
   <div class="col-md-10">
-    <h3>Filtered by: {{ listFilter }}</h3>
+    <h3>Filtered by: {{ listFilter }} Hits: {{ hitCount }}</h3>
   </div>
 </div>
