--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -7,9 +7,12 @@
     <div class="row">
       <pm-criteria
         class="col-md-10"
+        #filterCriteria
         [displayCriteria]="includeDetail"
         [hitCount]="filteredProducts?.length"
-      ></pm-criteria>
+      >
+        {{ filterCriteria.listFilter }}</pm-criteria
+      >
     </div>
 
     <div class="table-responsive">
