fix: adjust template to display parent changes properly

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -11,8 +11,8 @@
         [displayCriteria]="includeDetail"
         [hitCount]="filteredProducts?.length"
       >
-        {{ filterCriteria.listFilter }}</pm-criteria
-      >
+      </pm-criteria>
+      {{ filterCriteria.listFilter }}
     </div>
 
     <div class="table-responsive">
