--- a/src/app/shared/criteria/criteria.component.html
+++ b/src/app/shared/criteria/criteria.component.html
@@ -6,6 +6,6 @@
 </div>
 <div class="row" *ngIf="displayCriteria">
   <div class="col-md-10">
-    <h3>Filtered by: {{ listFilter }} Hits: {{ hitMessage }}</h3>
+    <h3>Filtered by: {{ listFilter }} {{ hitMessage }}</h3>
   </div>
 </div>
