--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -10,9 +10,9 @@
         #filterCriteria
         [displayCriteria]="includeDetail"
         [hitCount]="filteredProducts?.length"
+        (valueChange)="onValueChange($event)"
       >
       </pm-criteria>
-      {{ filterCriteria.listFilter }}
     </div>
 
     <div class="table-responsive">
