feat: adding another subscription to make selected product more evident in ui

--- a/src/app/products/product-shell/product-shell-list.component.html
+++ b/src/app/products/product-shell/product-shell-list.component.html
@@ -10,6 +10,7 @@
         class="list-group-item"
         *ngFor="let product of products"
         (click)="onSelected(product)"
+        [ngClass]="{'active': product?.id === selectedProduct?.id}"
       >
         {{ product.productName }} ({{ product.productCode }})
       </button>
